# polychrome

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: main.cpp  rendering.cpp  rendering.ixx
